feat:增加common服务节点